# sf_housing_permit_transparency

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
src/: config.py
src/analysis/: bottlenecks.py  queries.py  trends.py
src/dashboard/: app.py
src/ingestion/: clean.py  fetch.py
src/reports/: generate.py
tests/: conftest.py  test_bottlenecks.py  test_clean.py  test_trends.py
