[project]
name = "sf-civic-tech"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "jinja2>=3.1.6",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "sodapy>=2.2.0",
]
